# offshore

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
configs/: data.yaml  eval.yaml  model_base.yaml  model_lstm.yaml  model_transformer.yaml  train.yaml
examples/: README.md
examples/01_download_data/: download_indian_stocks.sh  download_indices.sh  download_us_stocks.sh
examples/02_preprocess_data/: preprocess_multiple_stocks.sh  preprocess_single_stock.sh
examples/03_train_models/: train_comparison.sh  train_lstm.sh  train_transformer.sh
examples/04_evaluate_models/: backtest_strategy.sh  evaluate_model.sh
examples/05_predict/: predict_batch.sh  predict_single.sh
examples/configs/: aggressive_training.yaml  indian_stocks.yaml  us_tech.yaml
scripts/: run_eval.sh  run_full_pipeline.sh  run_train.sh  setup.sh
src/: __init__.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  config_loader.py
src/data/: __init__.py  dataset.py  download.py  preprocess.py
src/evaluation/: __init__.py  backtest.py  metrics.py  plots.py
src/features/: __init__.py  labeling.py  technical.py
src/inference/: __init__.py  predictor.py
src/training/: __init__.py  callbacks.py  train_loop.py
tests/: __init__.py  conftest.py  test_data.py  test_features.py  test_metrics.py  test_models.py  test_training.py
